PROMETHEUS/alerts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alerts
  namespace: monitoring
spec:
  rules:
  - host: alerts.lab.int
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager-main
            port:
              number: 9093
  ingressClassName: nginx
